--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,47 @@
 .App {
   background-color: #282c34;
+  font-family: 'Encode Sans Condensed', sans-serif;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 60px auto;
+  grid-gap: 1rem;
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  font-size: calc(12px + 2vmin);
   color: white;
 }
+
+.capture {
+  display: flex;
+  align-self: center;
+  padding-left: 30px;
+}
+
+.connection , .stream {
+  margin-right: 30px;
+}
+
+.connection {
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.connection > .time {
+  display: flex;
+}
+
+.information {
+
+}
+
+.stream {
+  background-color: tomato;
+}
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
