--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   font-family: 'Encode Sans Condensed', sans-serif;
   min-height: 100vh;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 0.2fr 1fr;
   grid-auto-rows: 60px auto;
+  grid-auto-columns: 10px auto;
   grid-gap: 1rem;
   /* flex-direction: column; */
   /* align-items: center; */
@@ -35,7 +36,7 @@
 }
 
 .information {
-
+  align-self: center;
 }
 
 .stream {
