--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  /* background-color: #282c34; */
-  font-family: 'Encode Sans Condensed', sans-serif;
+  background-color: #282c34;
+  font-family: 'PT Sans', sans-serif;
   min-height: 100vh;
   display: grid;
   grid-template-columns: 0.2fr 1fr;
@@ -40,7 +40,11 @@
 }
 
 .stream {
-  background-color: tomato;
+  /* background-color: tomato; */
+  /* display: grid; */
+  /* grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 60px auto;
+  grid-gap: 1rem; */
 }
 
 
