--- a/src/commands/app.css
+++ b/src/commands/app.css
@@ -34,6 +34,11 @@
     display: grid;
     /* grid-gap: 1rem; */
 }
+
 .centerCommand > div {
     padding: 0px;
+}
+
+.flipCenter {
+    display: grid;
 }
